--- a/src/styles/bulma-dark.scss
+++ b/src/styles/bulma-dark.scss
@@ -2,6 +2,8 @@
 
 @import 'node_modules/bulma/sass/utilities/initial-variables.sass';
 
+@import 'styles/typography.scss';
+
 // General colors
 
 $scheme-main: $black;
