--- a/src/styles/bulma-dark.scss
+++ b/src/styles/bulma-dark.scss
@@ -1,41 +1,6 @@
 @charset 'utf-8';
 
-@import 'node_modules/bulma/sass/utilities/initial-variables.sass';
-
+// Bulma customizations
 @import 'styles/typography.scss';
-
-// General colors
-
-$scheme-main: $black;
-$scheme-main-bis: $black-bis;
-$scheme-main-ter: $black-ter;
-$scheme-invert: $white;
-$scheme-invert-bis: $white-bis;
-$scheme-invert-ter: $white-ter;
-
-$background: $black-ter;
-
-$border: $grey-darker;
-$border-hover: $grey-dark;
-$border-light: $grey-darker;
-$border-light-hover: $grey-dark;
-
-// Text colors
-
-$text: $grey-light;
-$text-invert: $grey-darker;
-$text-light: $grey;
-$text-strong: $white;
-
-// Link colors
-
-$link-hover: $white;
-$link-hover-border: $grey-dark;
-
-$link-focus: $white;
-$link-focus-border: $blue;
-
-$link-active: $white;
-$link-active-border: $grey-light;
-
-@import 'node_modules/bulma/bulma.sass';
+@import 'styles/layout.scss';
+@import 'styles/theme-dark.scss';
