--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,5 +1,198 @@
 @charset 'utf-8';
 
-$gap: 0px;
-$tablet: 399px;
-$desktop: 600px + (2 * $gap);
+@import 'node_modules/bulma/sass/utilities/mixins.sass';
+
+// Breakpoints
+
+$gap: 32px;
+$tablet: 600px;
+
+$navbar-breakpoint: $tablet;
+$navside-breakpoint: $desktop;
+$navbar-margin: 0.75em;
+
+// Flexbox Responsive Helpers
+
+.is-flex-direction-row-mobile {
+  @include mobile {
+    flex-direction: row;
+  }
+}
+.is-flex-direction-row-tablet-only {
+  @include tablet-only {
+    flex-direction: row;
+  }
+}
+.is-flex-direction-row-desktop-only {
+  @include desktop-only {
+    flex-direction: row;
+  }
+}
+.is-flex-direction-row-widescreen-only {
+  @include widescreen-only {
+    flex-direction: row;
+  }
+}
+.is-flex-direction-row-touch {
+  @include touch {
+    flex-direction: row;
+  }
+}
+.is-flex-direction-row-tablet {
+  @include tablet {
+    flex-direction: row;
+  }
+}
+.is-flex-direction-row-desktop {
+  @include desktop {
+    flex-direction: row;
+  }
+}
+.is-flex-direction-row-widescreen {
+  @include widescreen {
+    flex-direction: row;
+  }
+}
+.is-flex-direction-row-fullhd {
+  @include fullhd {
+    flex-direction: row;
+  }
+}
+
+.is-flex-direction-row-reverse-mobile {
+  @include mobile {
+    flex-direction: row-reverse;
+  }
+}
+.is-flex-direction-row-reverse-tablet-only {
+  @include tablet-only {
+    flex-direction: row-reverse;
+  }
+}
+.is-flex-direction-row-reverse-desktop-only {
+  @include desktop-only {
+    flex-direction: row-reverse;
+  }
+}
+.is-flex-direction-row-reverse-widescreen-only {
+  @include widescreen-only {
+    flex-direction: row-reverse;
+  }
+}
+.is-flex-direction-row-reverse-touch {
+  @include touch {
+    flex-direction: row-reverse;
+  }
+}
+.is-flex-direction-row-reverse-tablet {
+  @include tablet {
+    flex-direction: row-reverse;
+  }
+}
+.is-flex-direction-row-reverse-desktop {
+  @include desktop {
+    flex-direction: row-reverse;
+  }
+}
+.is-flex-direction-row-reverse-widescreen {
+  @include widescreen {
+    flex-direction: row-reverse;
+  }
+}
+.is-flex-direction-row-reverse-fullhd {
+  @include fullhd {
+    flex-direction: row-reverse;
+  }
+}
+
+.is-flex-direction-column-mobile {
+  @include mobile {
+    flex-direction: column;
+  }
+}
+.is-flex-direction-column-tablet-only {
+  @include tablet-only {
+    flex-direction: column;
+  }
+}
+.is-flex-direction-column-desktop-only {
+  @include desktop-only {
+    flex-direction: column;
+  }
+}
+.is-flex-direction-column-widescreen-only {
+  @include widescreen-only {
+    flex-direction: column;
+  }
+}
+.is-flex-direction-column-touch {
+  @include touch {
+    flex-direction: column;
+  }
+}
+.is-flex-direction-column-tablet {
+  @include tablet {
+    flex-direction: column;
+  }
+}
+.is-flex-direction-column-desktop {
+  @include desktop {
+    flex-direction: column;
+  }
+}
+.is-flex-direction-column-widescreen {
+  @include widescreen {
+    flex-direction: column;
+  }
+}
+.is-flex-direction-column-fullhd {
+  @include fullhd {
+    flex-direction: column;
+  }
+}
+
+.is-flex-direction-column-reverse-mobile {
+  @include mobile {
+    flex-direction: column-reverse;
+  }
+}
+.is-flex-direction-column-reverse-tablet-only {
+  @include tablet-only {
+    flex-direction: column-reverse;
+  }
+}
+.is-flex-direction-column-reverse-desktop-only {
+  @include desktop-only {
+    flex-direction: column-reverse;
+  }
+}
+.is-flex-direction-column-reverse-widescreen-only {
+  @include widescreen-only {
+    flex-direction: column-reverse;
+  }
+}
+.is-flex-direction-column-reverse-touch {
+  @include touch {
+    flex-direction: column-reverse;
+  }
+}
+.is-flex-direction-column-reverse-tablet {
+  @include tablet {
+    flex-direction: column-reverse;
+  }
+}
+.is-flex-direction-column-reverse-desktop {
+  @include desktop {
+    flex-direction: column-reverse;
+  }
+}
+.is-flex-direction-column-reverse-widescreen {
+  @include widescreen {
+    flex-direction: column-reverse;
+  }
+}
+.is-flex-direction-column-reverse-fullhd {
+  @include fullhd {
+    flex-direction: column-reverse;
+  }
+}
