Improve scrollbar visibility in dark mode

--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -21,6 +21,9 @@ $scheme-invert: $white;
 
 $body-background-color: $scheme-main-ter;
 $background: $scheme-main-ter;
+$scrollbar-background: $background;
+$scrollbar-color: $scheme-main-grey-bis;
+$scrollbar-hover-color: $scheme-main-grey-ter;
 
 // Component Colors
 
