--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -21,6 +21,9 @@ $scheme-invert: $black;
 
 $body-background-color: $scheme-main;
 $background: $scheme-main;
+$scrollbar-background: $background;
+$scrollbar-color: $scheme-main-grey-ter;
+$scrollbar-hover-color: $scheme-invert-grey-ter;
 
 // Component Colors
 
