Tweak theme grayscale colors

--- a/src/styles/bulma-light.scss
+++ b/src/styles/bulma-light.scss
@@ -3,4 +3,5 @@
 // Bulma customizations
 @import 'styles/typography.scss';
 @import 'styles/layout.scss';
+@import 'styles/colors.scss';
 @import 'styles/theme-light.scss';
