--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -27,7 +27,8 @@ $scrollbar-hover-color: $scheme-main-grey-ter;
 
 // Component Colors
 
-$navbar-background-color: $scheme-main;
+$navbar-item-color: $scheme-invert-ter;
+$navbar-background-color: $scheme-main-bis;
 $navbar-button-active-color: $scheme-invert;
 $navbar-button-active-background: $scheme-main-grey-bis;
 
