--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -27,6 +27,7 @@ $scrollbar-hover-color: $scheme-invert-grey-ter;
 
 // Component Colors
 
+$navbar-item-color: $scheme-invert-ter;
 $navbar-background-color: $scheme-main-grey-bis;
 $navbar-button-active-color: $scheme-invert;
 $navbar-button-active-background: $scheme-main-grey-ter;
