Improve navbar height responsiveness

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -7,6 +7,7 @@
 $gap: 16px;
 $tablet: 600px;
 
+$navbar-height: 4rem;
 $navbar-breakpoint: $tablet;
 $navside-breakpoint: $desktop;
 $navbar-margin: 0.75em;
