--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -28,8 +28,11 @@ $scrollbar-hover-color: $scheme-main-grey-ter;
 // Component Colors
 
 $navbar-item-color: $scheme-invert-ter;
-$navbar-background-color: $scheme-main-bis;
+$navbar-background-color: $scheme-main;
 $navbar-button-active-color: $scheme-invert;
-$navbar-button-active-background: $scheme-main-grey-bis;
+$navbar-button-active-background: $scheme-main-ter;
+
+$card-background-color: $scheme-main;
 
 @import 'styles/theme.scss';
+@import 'styles/components.scss';
