--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -61,12 +61,120 @@
   }
 }
 
+// Panels
+
+.panel.entity-panel {
+  display: inline-block;
+  vertical-align: top;
+  width: calc(100% - #{$gap});
+  max-width: 36em;
+  margin-bottom: $gap;
+  margin-right: $gap;
+  border-radius: 0.5em;
+  background-color: $card-background-color;
+  box-shadow: none;
+
+  @include from($navside-breakpoint) {
+    width: calc(100% - #{2 * $gap});
+    margin-bottom: 2 * $gap;
+    margin-right: 2 * $gap;
+  }
+
+  .panel-heading {
+    padding: $gap;
+    margin-bottom: 0;
+    border-radius: 0.5em 0.5em 0 0;
+    background-color: $card-header-background-color;
+    box-shadow: none;
+  }
+
+  .panel-block {
+    padding-left: $gap;
+    padding-right: $gap;
+    padding-top: 0.5 * $gap;
+    padding-bottom: 0.5 * $gap;
+  }
+
+  .panel-block:not(:last-child) {
+    border-bottom: 1px solid $card-item-border-color;
+  }
+}
+
+// Accordions
+
+ul[data-accordion] {
+  list-style: none;
+  margin: 0;
+}
+ul[data-accordion] li[data-accordion-item] + li[data-accordion-item] {
+  margin-top: 0;
+}
+li[data-accordion-item] {
+  display: block;
+  padding: 0;
+  margin: 0;
+}
+.panel.entity-panel li[data-accordion-item].panel-block {
+  padding: 0;
+}
+li[data-accordion-item]>button {
+  @include reset;
+
+  display: block;
+  width: 100%;
+  padding-left: $gap;
+  padding-right: $gap;
+  padding-top: 0.5 * $gap;
+  padding-bottom: 0.5 * $gap;
+  cursor: pointer;
+  text-align: left;
+}
+.accordion-header {
+  h1, h2, h3, h4, h5, h6 {
+    @include reset;
+    display: inline;
+    font-weight: normal;
+  }
+}
+.accordion-header.level {
+  display: flex;
+}
+button .accordion-header .icon {
+  transition: transform 0.4s ease-out;
+}
+button[aria-expanded="true"] .accordion-header .icon {
+  transform: rotate(0.5turn);
+}
+li[data-accordion-item]>div {
+  display: unset;
+}
+.accordion-content {
+  width: 100%;
+  padding-left: $gap;
+  padding-right: $gap;
+  padding-top: 0.5 * $gap;
+  padding-bottom: $gap;
+}
+
 // Tags
 
 .tag.zerotier-address {
   font-family: $family-monospace;
   padding-left: 0;
   padding-right: 0;
-  color: $cyan;
-  background-color: findLightColor($cyan);
+  color: $zerotier-address-tag-color;
+  background-color: $zerotier-address-tag-background-color;
+}
+.tag.zerotier-network {
+  font-family: $family-monospace;
+}
+.tag.socket {
+  font-family: $family-monospace;
+  color: $socket-tag-color;
+  background-color: $socket-tag-background-color;
+}
+.tag.domain-name {
+  font-family: $family-monospace;
+  color: $domain-name-tag-color;
+  background-color: $domain-name-tag-background-color;
 }
