--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -158,6 +158,13 @@ li[data-accordion-item]>div {
 
 // Tags
 
+.tag.scoped-name {
+  display: inline-block;
+  background-color: transparent;
+  padding: 0;
+  border-radius: 1em;
+  height: unset;
+}
 .tag.zerotier-address {
   font-family: $family-monospace;
   color: $zerotier-address-tag-color;
@@ -187,16 +194,18 @@ li[data-accordion-item]>div {
   margin-left: 0;
   border-radius: 0 0.75em 0.75em 0;
 }
-.tag.zerotier-unknown-network {
+.tag.zerotier-unknown-network-named {
   display: inline-block;
-  padding-left: 0;
+  background-color: $zerotier-unknown-network-tag-color;
+  padding-left: 0.25em;
   padding-right: 0.5em;
-  border-radius: 0.75em;
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+  border-radius: 1em;
   height: unset;
 }
-.tag.zerotier-unknown-network .tag.zerotier-network-name {
+.tag.zerotier-unknown-network-named .tag.zerotier-network-name {
   display: inline;
-  font-style: italic;
   background-color: transparent;
   height: unset;
   white-space: normal;
@@ -205,12 +214,36 @@ li[data-accordion-item]>div {
   font-family: $family-monospace;
   color: $socket-tag-color;
   background-color: $socket-tag-background-color;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  border-radius: 0.75em;
+}
+.tag.ip-address {
+  font-family: $family-monospace;
+  color: $socket-tag-color;
+  background-color: $socket-tag-background-color;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  border-radius: 0.75em;
+}
+.tag.ip-subnet {
+  font-family: $family-monospace;
+  color: $socket-tag-color;
+  background-color: $socket-tag-background-color;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   border-radius: 0.75em;
 }
 .tag.domain-name {
   font-family: $family-monospace;
   color: $domain-name-tag-color;
   background-color: $domain-name-tag-background-color;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  border-radius: 0.75em;
+}
+.tag.mac-address {
+  font-family: $family-monospace;
   padding-left: 0.5em;
   padding-right: 0.5em;
   border-radius: 0.75em;
