--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -41,6 +41,7 @@ $zerotier-address-tag-color: change-color($cyan, $lightness: 85%);
 $zerotier-address-tag-background-color: change-color($cyan, $lightness: 30%);
 $zerotier-network-number-tag-color: change-color($green, $lightness: 85%);
 $zerotier-network-number-tag-background-color: change-color($green, $lightness: 30%);
+$zerotier-unknown-network-tag-color: $background;
 $socket-tag-color: change-color($purple, $lightness: 90%);
 $socket-tag-background-color: change-color($purple, $lightness: 20%);
 $domain-name-tag-color: $white;
