--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -18,6 +18,7 @@ $scheme-invert-bis: $white-bis;
 $scheme-invert: $white;
 
 $green: hsl(153%, 53%, 30%);
+$turquoise: hsl(175, 100%, 30%);
 $red: hsl(348, 86%, 50%);
 
 // Element Colors
