--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -18,6 +18,7 @@ $scheme-invert-bis: $black-bis;
 $scheme-invert: $black;
 
 $green: hsl(153, 53%, 40%);
+$turquoise: hsl(175, 100%, 35%);
 $red: hsl(348, 86%, 61%);
 
 // Element Colors
@@ -43,9 +44,9 @@ $card-header-background-color: $scheme-main-grey-bis;
 $card-item-border-color: $card-header-background-color;
 
 $zerotier-address-tag-color: $scheme-invert-grey-bis;
-$zerotier-address-tag-background-color: change-color($cyan, $lightness: 85%);
+$zerotier-address-tag-background-color: change-color($cyan, $lightness: 80%);
 $zerotier-network-number-tag-color: $scheme-invert-grey-bis;
-$zerotier-network-number-tag-background-color: change-color($green, $lightness: 85%);
+$zerotier-network-number-tag-background-color: change-color($green, $lightness: 80%);
 $zerotier-unknown-network-tag-color: $background;
 $socket-tag-color: $scheme-invert-grey-bis;
 $socket-tag-background-color: change-color($purple, $lightness: 90%);
