--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -26,7 +26,6 @@ $red: hsl(348, 86%, 61%);
 $body-background-color: $scheme-main;
 $background: $scheme-main;
 $focus-color: change-color($cyan, $lightness: 65%);
-$scrollbar-background: $background;
 $scrollbar-color: $scheme-main-grey-ter;
 $scrollbar-hover-color: $scheme-invert-grey-ter;
 
@@ -42,6 +41,8 @@ $navbar-button-active-background: $scheme-main-grey-ter;
 $card-background-color: $scheme-main-grey;
 $card-header-background-color: $scheme-main-grey-bis;
 $card-item-border-color: $card-header-background-color;
+
+$modal-dialog-background: $scheme-main;
 
 $zerotier-address-tag-color: $scheme-invert-grey-bis;
 $zerotier-address-tag-background-color: change-color($cyan, $lightness: 80%);
